Fixed too small line-height when base font size is increased

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -10,6 +10,7 @@
         &.blog-post-view .post-description p {
             font-size: inherit;
             font-weight: inherit;
+            line-height: 1.7;
         }
         .post-content .post-description img {
             margin: 0;
